src/test/resources/tests/run-pass/ir/static-after-main.rs
fn main() {
    let a: int = GLOBAL + 4;

    println(a);
}

static GLOBAL: int = 8;